--- a/index.html
+++ b/index.html
@@ -38,12 +38,26 @@
 
 <!-- Midway -->
 <article id="wrapper2">
-<img id="bookingpng" src="media/book-logo.png" alt="Booking_png">
-<p id="beta">...Some Text...</p>
-<img id="planelogo" src="media/plane-logo.png" alt="planelogo_png">
-<p id="gamma">some text</p>
-<img id="locationpng" src="media/location-logo.png" alt="locationlogo_png">
-<p id="zeta">Location...etc</p>
+<div>
+  <img id="bookingpng" src="media/book-logo.png" alt="Booking_png">
+  <p id="beta">Book Now! Different Locations across the Glob! from italian castles to amazon river houses!</p>
+</div>
+
+<div>
+ <img id="planelogo" src="media/plane-logo.png" alt="planelogo_png">
+ <p id="gamma">Different Cheap Airlines to every one of your amused prefered Destinations!</p>
+</div>
+
+<div>
+ <img id="locationpng" src="media/location-logo.png" alt="locationlogo_png">
+ <p id="zeta">Diffrent Locations to stay in! from Moscow to the Great Missisipi.</p>
+</div>
 </article>
+
+
+<!-- end :)  -->
+<div class="footer">
+  <p>Footer</p>
+</div>
 </body>
 </html>
