Final commit (maybe)

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 
 <!-- end :)  -->
 <div class="footer">
-  <p>Footer</p>
+  <p id="footerx">Nomad.&#8482; All Rights Reserved.</p>
+</br>
+  <p id="footerx1">Designed by Tebbaa adnane</p>
 </div>
 </body>
 </html>
